Several fixes on cities and other settings